--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,6 +17,8 @@
     <% end %>
   </footer>
 
+  <aside class="sold-out">Sold Out!</aside>
+
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
