--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,7 +17,9 @@
     <% end %>
   </footer>
 
-  <aside class="sold-out">Sold Out!</aside>
+  <% if product.quantity == 0%>
+    <aside class="sold-out">Sold Out!</aside> 
+  <% end %>
 
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
