--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -8,6 +8,10 @@
     <h4>Thank you for your order!</h4>
   </div>
 
+  <div class="line_items">
+    <%= render @line_items %>
+  </div>
+
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
