Partial for line_items added - not yet styled but all data accessible

--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,3 +1,12 @@
 <p class="line_item">
-  <%= line_item.product_id %>
+  <%= line_item.product.name %>
+</p>
+<p class="line_item">
+  <%= line_item.quantity %>
+</p>
+<p class="line_item">
+  <%= image_tag line_item.product.image.thumb, alt: line_item.product.name %>
+</p>
+<p class="line_item">
+  <%= line_item.product.description %>
 </p>
