product name now correctly displaying in link

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,4 +1,4 @@
 <h1>About Us</h1>
-<p>For more that 43 years, we've been providing the most interesting products you could ever find. 
-  Have you seen our <%= link_to @product.inspect %>?
+<p>For more that 43 years, we've been providing the most interesting products you could ever find. On the internet.
+  Have you seen our <%= link_to @product.name %>?
 </p>
