--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -47,6 +47,21 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <% if current_user %>
+          <li>
+            <%= link_to current_user.first_name, '/cart' %>
+          </li>
+          <li>
+            <%= link_to 'Logout', '/logout' %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', '/login' %>
+          </li>
+          <li>
+            <%= link_to 'Signup', '/signup' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
